apps/azure-vote/azure-vote-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: azure-vote-front
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: azure-vote-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: <DNSNAME>.<LOCATION>.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: azure-vote-front
          servicePort: 80
        path: /
